# its_bedalyo

./: .env.example  .gitattributes  .gitignore  Its_bedal_yo.txt  README.md  mariadb.txt
clients/admin/admin/: CAdminDlg.cpp  CChatDlg.cpp  CChatDlg.h  CRefundDlg.cpp  CRefundDlg.h  CReviewMgrDlg.cpp  CReviewMgrDlg.h  Global_protocol.h  admin.cpp  admin.h  admin.rc  admin.vcxproj  adminDlg.cpp  adminDlg.h  pch.h  resource.h
clients/admin_mfc/: admin_mfc.cpp  admin_mfc.h  admin_mfc.slnx  admin_mfc.vcxproj  admin_mfcDlg.cpp  admin_mfcDlg.h  adminmfc.rc  resource.h
clients/admin_mfc/res/: adminmfc.rc2
clients/customer_qt/client/: MyPageWidget.cpp  MyPageWidget.h  NetworkManager.cpp  NetworkManager.h  OrderHistoryCard.cpp  OrderHistoryCard.h  OrderHistoryWidget.cpp  OrderHistoryWidget.h  PacketHeader.h  ResearchDTO.h  SearchResultWidget.cpp  SearchResultWidget.h  SearchWidget.cpp  SearchWidget.h  UserSession.h  client.pro  (+59 more)
common/dto/: AccountDTO.h  AllDTOs.h  BaseDTO.h  ChatDTO.h  OrderDTO.h  PaymentDTO.h  ResearchDTO.h  StoreDTO.h  StoreDetailDTO.h  mariadb.txt
common/include/: Global_protocol.h
common/util/: mariadb.txt
its_bedalyo/: Its_bedal_yo.txt  README.md
its_bedalyo/server/: main.cpp
server/: CMakeLists.txt  main.cpp
server/src/database/: AuthDAO.h  UserDAO.h
server/src/handler/: Dispatcher.cpp  Dispatcher.h  UserHandler.cpp  UserHandler.h
server/src/network/: ItsServer.cpp  ItsServer.h  PacketFramer.cpp  PacketFramer.h
server/src/session/: ClientSession.h  SessionManager.cpp  SessionManager.h
server/src/thread/: ThreadPool.cpp  ThreadPool.h
(+118 files in other folders)
